# tarot-bot

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: handlers.py  keyboards.py
src/database/: database.py  models.py  requests.py
